# ExternalGuided_abb_robot

./: README.md  steps
src/abb_irb6640_support/: package.xml
src/abb_irb6640_support/launch/: abb_irb6640_gazebo.launch  irb6640_185_280_control.launch  test_irb6640_185_280.launch
src/abb_irb6640_support/urdf/: astra.urdf.xacro  camera_test.xacro  irb6640_185_280.plugins.xacro  irb6640_185_280.urdf  irb6640_185_280.urdf.xacro  irb6640_185_280.xacro  irb6640_185_280_before.urdf  irb6640_185_280_macro.xacro  irb6640_185_280_macro_original.xacro
src/abb_irb6640_support/worlds/: empty.world
src/egm_interface/: CMakeLists.txt  package.xml
src/egm_interface/src/: egm_interface.cpp
src/egm_path/: CMakeLists.txt  README.md  package.xml
src/egm_path/config/: EGMPathParams.cfg
src/egm_path/src/: egm_path copy.cpp  egm_path sinControlLaw.cpp  egm_path.cpp
src/project/: CMakeLists.txt  package.xml
src/project/config/: irb6640_185_280_arm_controller.yaml  tfm_controllers original.yaml  tfm_controllers.yaml  tfm_controllers_indep.yaml
src/project/launch/: all_sim.launch  aruco.launch  detection_loop.launch  myworld.launch  pure_rviz.launch  simulation.launch
src/project/meshes/carToyota_aruco/: model.config  model.sdf
src/project/models/: audi_aruco_merged.mtl
src/project/models/carbody/: model.config  model.sdf
src/project/models/toyota_aruco100/: model.config  model.sdf
src/project/rviz/: simple.rviz  simple_dam.rviz
src/project/urdf/: abb_irb6640_185_280_sim.urdf.xacro  camera.plugins.xacro  camera_gazebo.xacro  inertias.urdf.xacro  irb6640_185_280_mass.xacro
src/project/worlds/: audi.world  carbody.world  carbody_moving.world  carbody_static.world  empty_movingbox.world  empty_toyota  example.world  world_test_1.world
