<?xml version="1.0"?>
<package format="2">
  <name>egm_path</name>
  <version>0.0.0</version>
  <description>End-efector position based on fiducial</description>

  <maintainer email="gengiro@todo.todo">gengiro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <depend>fiducial_msgs</depend>
  <depend>dynamic_reconfigure</depend>


</package>
